Input fältet fungerar, tillägg i JS doc, README fil

--- a/index.html
+++ b/index.html
@@ -25,27 +25,12 @@
             </div>
 
             <!------------input form----------->
-            <div class="functions">
-                <form>
-                    <div class="formbox">
-                        <input type="text" id="addtoinventory" placeholder="add article"/>
-                    </div>
-                    <div class="formbox">
-                        <button id="formbutton">add</button>
-                    </div>
-                    <div id="msg">
-                        <pre></pre>
-                    </div>
-                </form>
+            <input id="input" type="text" placeholder="add item">
+            <button id="inputButton"></button>
 
                 <!------------funktioner----------->
-                    <button onclick="showItemList()">show item list</button>
                     <button onclick="showCart()">show cart</button>
-                    <button onclick="printSame()">visa</button>
-        
                     <div id="showcart"><!---input--></div>
-                    <div id="itemlist"></div>
-                    <div id="hitta"></div>
                 </div>
         </div>
     </main>
