test för att uppdatera demolänk

--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
     <header></header>
     <main>
         <div class="store">
-
             <!--------store content-------->
             <div id="store-window">
-                <!--------changing window-->
-                <div id="changing-div">
-                </div>
+                <!--------changing window------->
+                <div id="changing-div"></div>
             </div>
 
-            <!------------input form----------->
+            <!------------input----------->
             <input id="input" type="text" placeholder="add item">
             <button id="inputButton"></button>
 
-                <!------------funktioner----------->
+                <!------------show cart function----------->
                     <button onclick="showCart()">show cart</button>
-                    <div id="showcart"><!---input--></div>
+                    <div id="showcart"></div>
                 </div>
         </div>
     </main>
