--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
             </div>
 
             <!------------input----------->
-            <input id="input" type="text" placeholder="add item">
+            <input id="input" type="text" placeholder="please enter an item">
             <button id="inputButton"></button>
 
+            <!-----error message-------->
+            <div id="error"></div>
+            
                 <!------------show cart function----------->
                     <button onclick="showCart()">show cart</button>
                     <div id="showcart"></div>
